k8s/coma/apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "homepage.coma.artichoke.network"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: homepage
                port:
                  number: 3000
  # tls:
  #   - hosts:
  #       - "<host>"
  #     secretName: <secret-name>
